Lots of performance improvements to make Moxie load faster: Moved from Editor2 to Editor widget since its page load time is faster; got rid of the dynamic addition of our Offline Widget's CSS to the page and instead require the developer to simply add this as a LINK tag in their HTML source; added an inline style in the Offline Widget's HTML to be invisible by default, then the Widget's CSS makes it visible -- on slow connections we used to see the raw, unstyled HTML of the Offline Widget if that became available before the Offline Widget's CSS -- this is fixed now; modified what packages we load in general to be more selective.
git-svn-id: http://svn.dojotoolkit.org/src/trunk@7140 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/src/dot/ui-template/widget.css
+++ b/src/dot/ui-template/widget.css
@@ -9,6 +9,7 @@
 	height: 14em;
 	border: 2px solid #CDDDE9; /* light tundra blue */
 	position: relative;
+	visibility: visible !important;
 }
 
 #dot-widget-title-bar{
